--- a/app/login/styles.css
+++ b/app/login/styles.css
@@ -1,4 +1,4 @@
-main {
+main.login {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -31,7 +31,7 @@ input {
     padding: 0 0.2em;
 }
 
-button {
+#login-button {
     font-size: 1em;
     border: 1px solid white;
     padding: 0.1em 0.5em;
@@ -40,7 +40,7 @@ button {
     margin-top: 1em;
 }
 
-button:hover {
+#login-button:hover {
     translate: 0 -0.05em;
 }
 
