--- a/app/overview/styles.css
+++ b/app/overview/styles.css
@@ -33,7 +33,7 @@ button:hover {
 button.logout {
     position: absolute;
     top: 0.3em;
-    right: 0.2em;
+    right: 0.3em;
     font-size: min(2em, 6vw);
 }
 
