--- a/app/search/styles.css
+++ b/app/search/styles.css
@@ -1,4 +1,4 @@
-main {
+main.search {
     display: flex;
     flex-direction: column;
     justify-content: center;
